force-app/main/default/objects/Vehicle__c/fields/Battery_Check__c.field-meta.xml
<CustomField>
    <fullName>Battery_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Check</label>
    <type>Checkbox</type>
</CustomField>