force-app/main/default/objects/Vehicle__c/fields/Break_Fluid_Check__c.field-meta.xml
<CustomField>
    <fullName>Break_Fluid_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Break Fluid Check</label>
    <type>Checkbox</type>
</CustomField>