force-app/main/default/objects/Vehicle__c/fields/Cash_In_Hand__c.field-meta.xml
<CustomField>
    <fullName>Cash_In_Hand__c</fullName>
    <label>Cash In Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>