force-app/main/default/objects/Vehicle__c/fields/Coolant_Check__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coolant Check</label>
    <type>Checkbox</type>
</CustomField>