force-app/main/default/objects/Vehicle__c/fields/Depreacisition__c.field-meta.xml
<CustomField>
    <fullName>Depreacisition__c</fullName>
    <label>Depreciation Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>