force-app/main/default/objects/Vehicle__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>