force-app/main/default/objects/Vehicle__c/fields/Engine_Oil_Check__c.field-meta.xml
<CustomField>
    <fullName>Engine_Oil_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engine Oil Check</label>
    <type>Checkbox</type>
</CustomField>