force-app/main/default/objects/Vehicle__c/fields/Insurance_Cost_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Cost_Per_Year__c</fullName>
    <label>Insurance Cost Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>