force-app/main/default/objects/Vehicle__c/fields/Last_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cleared_Date__c</fullName>
    <label>Last Cleared Date</label>
    <type>DateTime</type>
</CustomField>