force-app/main/default/objects/Vehicle__c/fields/Last_Insurance_Renwal__c.field-meta.xml
<CustomField>
    <fullName>Last_Insurance_Renwal__c</fullName>
    <label>Last Insurance Renwal</label>
    <type>Date</type>
</CustomField>