force-app/main/default/objects/Vehicle__c/fields/Max_size__c.field-meta.xml
<CustomField>
    <fullName>Max_size__c</fullName>
    <label>Max size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>