force-app/main/default/objects/Vehicle__c/fields/Next_Fitness_Test__c.field-meta.xml
<CustomField>
    <fullName>Next_Fitness_Test__c</fullName>
    <label>Next Fitness Test</label>
    <type>Date</type>
</CustomField>