force-app/main/default/objects/Vehicle__c/fields/Next_Insurance_Renwal__c.field-meta.xml
<CustomField>
    <fullName>Next_Insurance_Renwal__c</fullName>
    <label>Next Insurance Renwal</label>
    <type>Date</type>
</CustomField>