force-app/main/default/objects/Vehicle__c/fields/Smoke_Test__c.field-meta.xml
<CustomField>
    <fullName>Smoke_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoke Test</label>
    <type>Checkbox</type>
</CustomField>