force-app/main/default/objects/Vehicle__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>