force-app/main/default/objects/Vehicle__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Week</fullName>
            </value>
            <value>
                <fullName>Second Week</fullName>
            </value>
            <value>
                <fullName>Third Week</fullName>
            </value>
            <value>
                <fullName>Fourth Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>