force-app/main/default/objects/Vehicle__c/fields/Week_Sales__c.field-meta.xml
<CustomField>
    <fullName>Week_Sales__c</fullName>
    <label>Week Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUN</fullName>
                <label>Sunday</label>
            </value>
            <value>
                <fullName>MON</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>TUE</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>WED</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>THU</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>FRI</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>SAT</fullName>
                <label>Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>