force-app/main/default/objects/Vehicle__c/fields/Yearly_Maintanance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Maintanance_Cost__c</fullName>
    <label>Yearly Maintanance Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>